--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.TINKER_VERSION = '1.9.14.5'
+    ext.TINKER_VERSION = '1.9.14.6'
+    ext.TINKERPATCH_VERSION = '1.2.14.6'
 
     ext.kotlin_version = '1.3.72'
     repositories {
@@ -21,7 +22,7 @@ buildscript {
         // in the individual module build.gradle files
 
         // TinkerPatch 插件
-        classpath "com.tinkerpatch.sdk:tinkerpatch-gradle-plugin:1.2.14.6"
+        classpath "com.tinkerpatch.sdk:tinkerpatch-gradle-plugin:$TINKERPATCH_VERSION"
     }
 }
 
