--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,10 @@ kotlin.code.style=official
 android.enableJetifier=true
 org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
 android.useAndroidX=true
+
+STOREFILE = ../jokes.jks
+STOREPASS = android
+KEYALIAS = joke
+KEYPASS = android
+
+TINKER_ENABLE = true
